syntax = "proto3";

package v2ray.core.transport.internet.hysteria2;
option csharp_namespace = "V2Ray.Core.Transport.Internet.Hysteria2";
option go_package = "github.com/v2fly/v2ray-core/v4/transport/internet/hysteria2";
option java_package = "com.v2ray.core.transport.internet.hysteria2";
option java_multiple_files = true;

message Congestion{
  string type = 1;

  uint64 up_mbps = 2;
  uint64 down_mbps = 3;
}

message OBFS {
  string type = 1;
  string password = 2;
}

message Config {
  string password = 3;
  Congestion congestion = 4;
  bool ignore_client_bandwidth = 5;
  bool use_udp_extension = 6;
  OBFS obfs = 7;
}
