syntax = "proto3";

package v2ray.transport.internet.splithttp;
option csharp_namespace = "V2Ray.Transport.Internet.SplitHttp";
option go_package = "github.com/v2fly/v2ray-core/v5/transport/internet/splithttp";
option java_package = "com.v2ray.transport.internet.splithttp";
option java_multiple_files = true;

import "common/protoext/extensions.proto";

message Config {
  option (v2ray.core.common.protoext.message_opt).type = "transport";
  option (v2ray.core.common.protoext.message_opt).short_name = "splithttp";

  string host = 1;
  string path = 2;
  map<string, string> header = 3;
  bool noSSEHeader = 4;
}
